Started first lession with myoglobin

--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Lesson 1 - The PyMol GUI
-image: /assets/img/blog/apfed_logo.png
+image: /assets/img/blog/lessons/l1/myoglobin_start.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
@@ -15,7 +15,11 @@ categories: proteins
 
 # Lesson 1 - The PyMol GUI
 
+## Myoglobin
 
+https://pdb101.rcsb.org/motm/1 
+
+PDB code: 1mbn
 
 * toc
 {:toc}
