Added first exercise

--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 1 - The PyMol GUI
-image: /assets/img/lessons/myoglobinborder.png
+image: /assets/img/lessons/myoglobinborder-min.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  About my first in-person conference and how great it is to design proteins
+  How to use your mouse to dive into the world of proteins
 invert_sidebar: true
 ---
 
