Fixed yt video embedding

--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -27,7 +27,7 @@ To start, we will fetch the structure of myoglobin from the PDB database. To do 
 With the structure of myoglobin loaded, we can start to explore the structure; follow along with the video below to learn how to use the PyMol GUI to explore the structure of proteins such as myoglobin.
 
 <div class="sixteen-nine">
-  <iframe src="https://www.youtube.com/watch?v=1hXkvj4Ycv8" style="width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <iframe src="https://www.youtube.com/embed/1hXkvj4Ycv8" style="width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 Now that you have seen how to use the PyMol GUI to explore the structure of proteins, you can try it out yourself! Try to play around with the myoglobin structure and see what you can find. You can also try to load other proteins from the PDB database and explore their structures. You can find a list of proteins that are related to myoglobin [here](https://www.rcsb.org/structure/1MBN).
