--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -33,7 +33,7 @@ With the structure of myoglobin loaded, we can start to explore the structure; f
 Now that you have seen how to use the PyMol GUI to explore the structure of proteins, you can try it out yourself! Try to play around with the myoglobin structure and see what you can find. You can also try to load other proteins from the PDB database and explore their structures. You can find a list of proteins that are related to myoglobin [here](https://www.rcsb.org/structure/1MBN).
 
 
-After you have explored the structure of myoglobin, try to complete [exercise 0](https://pymol-course.netlify.app/projects/ex0/) to test your knowledge of the PyMol GUI.
+After you have explored the structure of myoglobin, try to complete [exercise 0](https://structural-bioinformatics.netlify.app/projects/ex0/) to test your knowledge of the PyMol GUI.
 
 
 
