--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Lesson 1 - The PyMol GUI
+title: Lesson 1 - PyMol
 image: /assets/img/lessons/myoglobinborder-min.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
@@ -8,17 +8,17 @@ accent_image:
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How to use PyMol to dive into the world of proteins
 invert_sidebar: true
 ---
 
-# Lesson 1 - The PyMol GUI
+# Lesson 1 - PyMol
 
 There are different ways to interact with PyMol; one of the most natural ones is the Graphical User Interface (GUI), so basically what you are used to from Word PowerPoint etc: you click buttons and then something happens.
 
 This is different from the command line interface (CLI) that we will use later on. In the CLI, you type commands and then something happens. The CLI is very powerful, but it is also very unforgiving. If you make a typo, you will get an error message and the program will stop. In the GUI, you can click buttons and if you make a mistake, you can just click the undo button and start over.
 
-For this lesson, we will use the GUI to get a feel for PyMol. We will also use it to get a feel for the structure of proteins. To start, we will look at the structure of myoglobin, which is a protein that is found in muscle cells and is responsible for storing oxygen. You can find the structure of myoglobin in the PDB database by searching for the name of the protein. If you are not familiar with the PDB database, you can read more about it [here](https://www.rcsb.org/education/what-is-pdb).
+For this lesson, we will start using the GUI to get a feel for PyMol. We will also use it to get a feel for the structure of proteins. To start, we will look at the structure of myoglobin, which is a protein that is found in muscle cells and is responsible for storing oxygen. You can find the structure of myoglobin in the PDB database by searching for the name of the protein. If you are not familiar with the PDB database, you can read more about it [here](https://www.rcsb.org/education/what-is-pdb).
 
 You can read more about myoglobin on the [PDB101 website](https://pdb101.rcsb.org/motm/1), which is a great resource for learning about proteins and their structures and functions!
 
