--- a/_projects/ex10.md
+++ b/_projects/ex10.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Exercise 2 - PyMOL scripting
+title: Exercise 10 - Drug Design and Docking
 caption: Start using the PyMol scripting language
 description: >
   We will now start using the PyMol scripting language to create our own scripts. This will allow us to automate tasks and create more complex visualizations.
@@ -13,7 +13,7 @@ image:
 sitemap: false
 ---
 
-# Exercise 2 - PyMOL scripting
+# Exercise 10 - Drug Design and Docking
 
 
 
