--- a/_projects/ex11.md
+++ b/_projects/ex11.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Exercise 4 - Protein folding and stability, protein design I
+title: Exercise 11 - Animations and Publication Quality Graphics
 caption: Start using the PyMol scripting language
 description: >
   We will now start using the PyMol scripting language to create our own scripts. This will allow us to automate tasks and create more complex visualizations.
@@ -13,7 +13,7 @@ image:
 sitemap: false
 ---
 
-# Exercise 4 - Protein folding and stability, protein design I
+# Exercise 11 - Animations and Publication Quality Graphics
 
 
 
