Added dna exercise

--- a/proteins/_posts/2023-06-18-lesson1b.md
+++ b/proteins/_posts/2023-06-18-lesson1b.md
@@ -19,7 +19,7 @@ invert_sidebar: true
 In this part, you will learn more about the Protein Data Bank (PDB), the unique PDB ID each protein gets and how you can select parts of a protein with property selectors.
 
 <div class="sixteen-nine">
-  <iframe src="https://www.youtube.com/watch?v=fMLleDEE31E" style="width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <iframe src="https://www.youtube.com/embed/1hXkvj4Ycv8" style="width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 ## Part 2: Using Python scripts in PyMOL
