Restructured lessons and added resources

--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -14,6 +14,15 @@ invert_sidebar: true
 
 # Lesson 1 - PyMol
 
+### Required reading for this lesson
+[Preface to Introduction to Protein Structural Bioinformatics](https://arxiv.org/abs/1801.09442)
+[Introduction to Protein Structure](https://arxiv.org/abs/2307.02169)
+
+### Optional reading for this lesson
+[Data Resources for Structural Bioinformatics](https://arxiv.org/abs/2307.02171)
+
+This is a course about structural bioinformatics. We will talk about all different kinds of structures, focusing on proteins but also touching on DNA/RNA and carbohydrates. However, before we dive into the meat of the topic, I want you to get a bit of an intuitive understanding of the molecules we are dealing with; that is why we start with the biomolecular visualisation software PyMol. It will also come in handy later when we want to visualise and test the concepts we learn about.
+
 There are different ways to interact with PyMol; one of the most natural ones is the Graphical User Interface (GUI), so basically what you are used to from Word PowerPoint etc: you click buttons and then something happens.
 
 This is different from the command line interface (CLI) that we will use later on. In the CLI, you type commands and then something happens. The CLI is very powerful, but it is also very unforgiving. If you make a typo, you will get an error message and the program will stop. In the GUI, you can click buttons and if you make a mistake, you can just click the undo button and start over.
