Added pictures for lessons

--- a/proteins/_posts/2023-08-03-lesson4.md
+++ b/proteins/_posts/2023-08-03-lesson4.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 4 - Protein structure prediction
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/protein_structure_prediction.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How to understand structure from sequence
 invert_sidebar: true
 ---
 
