--- a/proteins/_posts/2023-08-04-lesson5.md
+++ b/proteins/_posts/2023-08-04-lesson5.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 5 - Generative Modelling
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/generative_modelling.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How to generate new data
 invert_sidebar: true
 ---
 
@@ -28,7 +28,9 @@ invert_sidebar: true
 - [Blogpost Renato Candido | Build your first GANs](https://realpython.com/generative-adversarial-networks/#the-architecture-of-generative-adversarial-networks)
 
 
+## Credits
 
+The image was taken from the [Stable Diffusion repository](https://github.com/Stability-AI/stablediffusion/blob/main/assets/stable-samples/txt2img/768/merged-0002.png) by StabilityAI.
 
 
 
