--- a/proteins/_posts/2023-08-06-lesson 7.md
+++ b/proteins/_posts/2023-08-06-lesson 7.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 7 - Simulations
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/simulations.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How we can go beyond static protein structures
 invert_sidebar: true
 ---
 
