--- a/proteins/_posts/2023-08-07-lesson 8.md
+++ b/proteins/_posts/2023-08-07-lesson 8.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 8 - Evolution and Bioinformatics
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/1tub_1fsz_super.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  Why proteins are not as simple as dog images
 invert_sidebar: true
 ---
 
