--- a/proteins/_posts/2023-08-09-lesson10.md
+++ b/proteins/_posts/2023-08-09-lesson10.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 10 - Graphics and Animations
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/dna_side.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How to show your molecules from their best sides
 invert_sidebar: true
 ---
 
