--- a/_projects/ex10.md
+++ b/_projects/ex10.md
@@ -1,20 +1,18 @@
 ---
 layout: project
-title: Exercise 10 - Drug Design and Docking
-caption: Start using the PyMol scripting language
+title: Exercise 11 - Animations and Publication Quality Graphics
+caption: How to show your molecules from their best side
 description: >
-  We will now start using the PyMol scripting language to create our own scripts. This will allow us to automate tasks and create more complex visualizations.
+  In this exercise you are asked to recap some of the content we talked about in this lecture and visualise your results via some cool graphics.
 date: '20-08-2022'
 image: 
-  path: /assets/img/exercises/pymol_scripting.jpg
+  path: /assets/img/lessons/dna_side.png
 #links:
 #  - title: Link
 #    url: https://hydejack.com/
 sitemap: false
 ---
 
-# Exercise 10 - Drug Design and Docking
-
-
+# Exercise 11 - Animations and Publication Quality Graphics
 
 
