--- a/_projects/ex11.md
+++ b/_projects/ex11.md
@@ -1,19 +1,19 @@
 ---
 layout: project
-title: Exercise 11 - Animations and Publication Quality Graphics
-caption: Start using the PyMol scripting language
+title: Exercise 11 - Further topics
+caption: What else is out there
 description: >
-  We will now start using the PyMol scripting language to create our own scripts. This will allow us to automate tasks and create more complex visualizations.
+  In this exercise you are asked to go beyond what we did in the course and explore what other things there are out there in the field of structural bioinformatics.
 date: '20-08-2022'
 image: 
-  path: /assets/img/exercises/pymol_scripting.jpg
+  path: /assets/img/lessons/further_topics.jpg
 #links:
 #  - title: Link
 #    url: https://hydejack.com/
 sitemap: false
 ---
 
-# Exercise 11 - Animations and Publication Quality Graphics
+# Exercise 11 - Further topics
 
 
 
