--- a/proteins/_posts/2023-06-18-lesson1b.md
+++ b/proteins/_posts/2023-06-18-lesson1b.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 1b - PyMol Scripting
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/exercises/pymol_scripting.jpg
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How to use your keyboard to dive into the world of proteins
 invert_sidebar: true
 ---
 
