--- a/proteins/_posts/2023-08-02-lesson3.md
+++ b/proteins/_posts/2023-08-02-lesson3.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 3 - Geometric Deep Learning (GNNs)
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/gnn_molecules.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How can we describe molecules on the computer?
 invert_sidebar: true
 ---
 
@@ -24,6 +24,10 @@ invert_sidebar: true
 - [Datacamp Article to get you started with DL on Graphs in PyTorch Geometric](https://www.datacamp.com/tutorial/comprehensive-introduction-graph-neural-networks-gnns-tutorial)
 
 ![Bloom's taxonomy](https://www.google.com/url?sa=i&url=https%3A%2F%2Fcitt.ufl.edu%2Fresources%2Fthe-learning-process%2Fdesigning-the-learning-experience%2Fblooms-taxonomy%2F&psig=AOvVaw0R780i-w_ndUrB188eKcBY&ust=1687014747847000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCMi29eeJyP8CFQAAAAAdAAAAABAE)
+
+### Credits
+
+Image was taken from the [GNN 101 notebook](https://colab.research.google.com/github/chaitjo/geometric-gnn-dojo/blob/main/geometric_gnn_101.ipynb) by Chaintaya Joshi.
 
 
 *[SERP]: Search Engine Results Page
