--- a/proteins/_posts/2023-08-05-lesson 6.md
+++ b/proteins/_posts/2023-08-05-lesson 6.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 6 - Protein Design	
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/protein_design.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  How to create novel proteins
 invert_sidebar: true
 ---
 
