--- a/proteins/_posts/2023-08-08-lesson 9.md
+++ b/proteins/_posts/2023-08-08-lesson 9.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 9 - Drug Design (Docking and Generative)
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/docking.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  Small molecules for the win
 invert_sidebar: true
 ---
 
