--- a/proteins/_posts/2023-08-01-lesson2.md
+++ b/proteins/_posts/2023-08-01-lesson2.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Lesson 2 - Machine Learning in Biochemistry
-image: /assets/img/lessons/myoglobinborder-min.png
+image: /assets/img/lessons/ml_biochemistry.jpeg
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How to use your mouse to dive into the world of proteins
+  The revolution will not be supervised
 invert_sidebar: true
 ---
 
