Added final images

--- a/proteins/_posts/2023-08-01-lesson2.md
+++ b/proteins/_posts/2023-08-01-lesson2.md
@@ -21,7 +21,7 @@ invert_sidebar: true
 
 
 ### Optional reading for this lesson
-- [FastAI course: Practical Deep Learning for Coders](https://course.fast.ai/)
+- [FastAI course - Practical Deep Learning for Coders](https://course.fast.ai/)
 
 
 
