--- a/proteins/_posts/2023-08-02-lesson3.md
+++ b/proteins/_posts/2023-08-02-lesson3.md
@@ -15,8 +15,8 @@ invert_sidebar: true
 # Lesson 3 - Geometric Deep Learning (GNNs)
 
 ### Required reading for this lesson
-- [Article Google Research | A Gentle Introduction to Graph Neural Networks](https://distill.pub/2021/gnn-intro/)
-- [Video Petar Veličković | Intro to graph neural networks](https://www.youtube.com/watch?v=8owQBFAHw7E)
+- [Article Google Research - A Gentle Introduction to Graph Neural Networks](https://distill.pub/2021/gnn-intro/)
+- [Video Petar Veličković - Intro to graph neural networks](https://www.youtube.com/watch?v=8owQBFAHw7E)
 
 
 ### Optional reading for this lesson
