--- a/proteins/_posts/2023-08-03-lesson4.md
+++ b/proteins/_posts/2023-08-03-lesson4.md
@@ -16,20 +16,22 @@ invert_sidebar: true
 
 ### Required reading for this lesson
 
-- [Video Nazim Bouatta | Machine learning for protein structure prediction, Part 1: Algorithm space](https://www.youtube.com/watch?v=yqeUH4RsJp8)
-- [Blogpost Carlos Outeiral Rubiera | AlphaFold 2 is here: what’s behind the structure prediction miracle](https://www.blopig.com/blog/2021/07/alphafold-2-is-here-whats-behind-the-structure-prediction-miracle/)
+- [Video Nazim Bouatta - Machine learning for protein structure prediction, Part 1: Algorithm space](https://www.youtube.com/watch?v=yqeUH4RsJp8)
+- [Blogpost Carlos Outeiral Rubiera - AlphaFold 2 is here: what’s behind the structure prediction miracle](https://www.blopig.com/blog/2021/07/alphafold-2-is-here-whats-behind-the-structure-prediction-miracle/)
 - [Textbook Chapter on Protein Structure prediction (partly outdated, but section 7.21-7.23 on quaility criteria and section 7.3 on new frontiers in structure prediction are very informative)](http://arxiv.org/abs/1712.00407)
 
 
 ### Optional reading for this lesson
-- [Video Nazim Bouatta | Machine learning for protein structure prediction, Part 2: AlphaFold2 architecture](https://www.youtube.com/watch?v=ri39B0Voujc)
-- [Video Nazim Bouatta | Machine learning for protein structure prediction, Part 3: AlphaFold2 and OpenFold](https://www.youtube.com/watch?v=kIkn5DGEJJw)
-- [Blogpost Mohammed AlQuraishi | AlphaFold2 @ CASP14: “It feels like one’s child has left home.” Directly after CASP](https://moalquraishi.wordpress.com/2020/12/08/alphafold2-casp14-it-feels-like-ones-child-has-left-home/)
+- [Video Nazim Bouatta - Machine learning for protein structure prediction, Part 2: AlphaFold2 architecture](https://www.youtube.com/watch?v=ri39B0Voujc)
+- [Video Nazim Bouatta - Machine learning for protein structure prediction, Part 3: AlphaFold2 and OpenFold](https://www.youtube.com/watch?v=kIkn5DGEJJw)
+- [Blogpost Mohammed AlQuraishi - AlphaFold2 @ CASP14: “It feels like one’s child has left home.” Directly after CASP](https://moalquraishi.wordpress.com/2020/12/08/alphafold2-casp14-it-feels-like-ones-child-has-left-home/)
 - [Blogpost Mohammed AlQuraishi | The AlphaFold2 Method Paper: A Fount of Good Ideas. When the AF2 paper was published](https://moalquraishi.wordpress.com/2021/07/25/the-alphafold2-method-paper-a-fount-of-good-ideas/)
 - [Video Aleksa Gordić - Google DeepMind's AlphaFold 2 explained](https://www.youtube.com/watch?v=HhomSGnP-x8)
 - [Textbook chapter on Structure Determination (in case you want to learn more about the experimental techniques)](http://arxiv.org/abs/2108.02706)
 
+## Credits
 
+The title image was taken from a [blog post](https://www.ptngconsulting.com/blog/machine-learning-for-protein-engineering-here-to-stay) I have written as part of my consulting activities for PTNG.
 
 
 
