--- a/proteins/_posts/2023-08-04-lesson5.md
+++ b/proteins/_posts/2023-08-04-lesson5.md
@@ -15,8 +15,8 @@ invert_sidebar: true
 # Lesson 5 - Generative Modelling
 
 ### Required reading for this lesson
-- [Chapter by David Foster | Introducting to Generative Modeling](https://www.oreilly.com/library/view/generative-deep-learning/9781492041931/ch01.html)
-- [Video Ari Seff | What are Diffusion Models?](https://www.youtube.com/watch?v=fbLgFrlTnGU)
+- [Chapter by David Foster - Introducting to Generative Modeling](https://www.oreilly.com/library/view/generative-deep-learning/9781492041931/ch01.html)
+- [Video Ari Seff - What are Diffusion Models?](https://www.youtube.com/watch?v=fbLgFrlTnGU)
 - [First ten minutes of Introduction to Generative AI](https://www.youtube.com/watch?v=G2fqAlgmoPo)
 
 
