--- a/proteins/_posts/2023-08-05-lesson 6.md
+++ b/proteins/_posts/2023-08-05-lesson 6.md
@@ -17,7 +17,7 @@ invert_sidebar: true
 ### Required reading for this lesson
 - [High level TED talk from David Baker about protein design](https://www.youtube.com/watch?v=PJLT0cAPNfs)
 - [High level C&EN article about protein design](https://cen.acs.org/physical-chemistry/protein-folding/Generative-AI-dreaming-new-proteins/101/i12)
-- [Video Chloe Hsu | Deep Learning in Structural Biology and Protein Design: How, Where, and Why](https://www.youtube.com/watch?v=UJGtwUFQKfs&t=2309s)
+- [Video Chloe Hsu - Deep Learning in Structural Biology and Protein Design: How, Where, and Why](https://www.youtube.com/watch?v=UJGtwUFQKfs&t=2309s)
 
 
 ### Optional reading for this lesson
