--- a/proteins/_posts/2023-06-18-lesson1b.md
+++ b/proteins/_posts/2023-06-18-lesson1b.md
@@ -28,29 +28,14 @@ Often, there are certain things we want to do repeatedly such as coloring protei
 
 In case you are not familiar with Python: don't worry, you will survive this course anyway. However, in case you are interested in programming and Python (as you should be) there are Python courses that I and other students organise every semester, so drop at one of these or look at the material from a [past course](https://github.com/kierandidi/python_for_scientists) to get an introduction!
 
-For this part, the only thing you will need is a text editor in which you can write plain text. And no, Word does not count! We need something that writes plain text, no formatting etc. One for this would be for example [VSCode](https://code.visualstudio.com/), a full-fledged editor environment that I often use for coding as well. Although I would reommend that one, there are others you can use like [Sublime Text](https://www.sublimetext.com/), [Notepad++](https://notepad-plus-plus.org/downloads/) or the simple Notepad/TextEdit application on your laptop. With this, you can dive right into PyMOL scripting!
-
-<div class="sixteen-nine">
-  <iframe src="https://www.youtube.com/watch?v=ZyJhgIbl4Ac" style="width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
-
+For this part, the only thing you will need is a text editor in which you can write plain text. And no, Word does not count! We need something that writes plain text, no formatting etc. One for this would be for example [VSCode](https://code.visualstudio.com/), a full-fledged editor environment that I often use for coding as well. Although I would reommend that one, there are others you can use like [Sublime Text](https://www.sublimetext.com/), [Notepad++](https://notepad-plus-plus.org/downloads/) or the simple Notepad/TextEdit application on your laptop. With this, you can dive right into PyMOL scripting via [this video](https://www.youtube.com/watch?v=fMLleDEE31E)!
 ## Part 3: Getting help at the PyMOL wiki
 
-If you are stuck with a certain problem, there is a good chance someone had this problem before! Good places to look for answers in general for coding problems are for example [StackOverFlow](https://stackoverflow.com/) or the relevant repositories on [GitHub](https://github.com/), but for PyMol there is the so-called [PyMol Wiki](https://pymolwiki.org/index.php/Main_Page) where you can find a lot of explanations to the different commands.
-
-<div class="sixteen-nine">
-  <iframe src="https://www.youtube.com/watch?v=VW3XWiM5bmc" style="width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
-
-
+If you are stuck with a certain problem, there is a good chance someone had this problem before! Good places to look for answers in general for coding problems are for example [StackOverFlow](https://stackoverflow.com/) or the relevant repositories on [GitHub](https://github.com/), but for PyMol there is the so-called [PyMol Wiki](https://pymolwiki.org/index.php/Main_Page) where you can find a lot of explanations to the different commands. You can also look at [this video](https://www.youtube.com/watch?v=VW3XWiM5b) to learn more about the PyMol Wiki.
 
 ## Part 4 (Optional): Writing extensions in the PyMOL API
 
-For the ones among you who are deeper interested in coding and have a bit of Python experience: you can write your own extensions and commands for PyMOL via Python functions!
-
-<div class="sixteen-nine">
-  <iframe src="https://www.youtube.com/watch?v=MDjCpFoHBnI" style="width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
+For the ones among you who are deeper interested in coding and have a bit of Python experience: you can write your own extensions and commands for PyMOL via Python functions! Learn how to do it in [this video](https://www.youtube.com/watch?v=MDjCpFoHBnI).
 
 ## Extra (Optional)
 
