Changed lesson numbers

--- a/proteins/_posts/2023-08-07-lesson9.md
+++ b/proteins/_posts/2023-08-07-lesson9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Lesson 8 - Evolution and Bioinformatics
+title: Lesson 9 - Evolution, Language and Bioinformatics
 image: /assets/img/lessons/1tub_1fsz_super.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
@@ -12,7 +12,7 @@ description: >
 invert_sidebar: true
 ---
 
-# Lesson 8 - Evolution and Bioinformatics
+# Lesson 9 - Evolution, Language and Bioinformatics
 
 ### Required reading for this lesson
 - [Video Playlist on Sequence Alignments](https://www.youtube.com/watch?v=slUaVeNvuTk&list=PLQ-85lQlPqFNmbPEsMoxb5dM5qtRaVShn)
