--- a/_projects/ex10.md
+++ b/_projects/ex10.md
@@ -1,18 +1,20 @@
 ---
 layout: project
-title: Exercise 10 - Animations and Publication Quality Graphics
-caption: How to show your molecules from their best side
+title: Exercise 10 - Drug Design (Docking and Generative)
+caption: Small molecules for the win
 description: >
-  In this exercise you are asked to recap some of the content we talked about in this lecture and visualise your results via some cool graphics.
-date: '15-08-2023'
+  In this exercise you are asked to look at some of the generative models for small molecules we talked about in the lecture and see how well they work via docking.
+date: '14-08-2023'
 image: 
-  path: /assets/img/lessons/dna_side.png
+  path: /assets/img/lessons/docking.png
 #links:
 #  - title: Link
 #    url: https://hydejack.com/
 sitemap: false
 ---
 
-# Exercise 10 - Animations and Publication Quality Graphics
+# Exercise 10 - Drug Design (Docking and Generative)
+
+
 
 
