--- a/proteins/_posts/2023-08-05-lesson7.md
+++ b/proteins/_posts/2023-08-05-lesson7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Lesson 6 - Protein Design	
+title: Lesson 7 - Protein Design	
 image: /assets/img/lessons/protein_design.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
@@ -12,7 +12,7 @@ description: >
 invert_sidebar: true
 ---
 
-# Lesson 6 - Protein Design	
+# Lesson 7 - Protein Design	
 
 ### Required reading for this lesson
 - [High level TED talk from David Baker about protein design](https://www.youtube.com/watch?v=PJLT0cAPNfs)
@@ -23,6 +23,7 @@ invert_sidebar: true
 ### Optional reading for this lesson
 - [Video RFDiffusion authors](https://www.youtube.com/watch?v=wIHwHDt2NoI)
 - [State of the field talk by David Baker](https://www.youtube.com/watch?v=-H27Kv5duYA)
+- [How can the protein design community best support biologists who want to harness AI tools for protein structure prediction and design?](https://www.cell.com/cell-systems/fulltext/S2405-4712(23)00212-0)
 
 
 *[SERP]: Search Engine Results Page
