Added slides for L1-4

--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Lesson 1 - PyMol
+title: Lesson 1 - Introduction
 image: /assets/img/lessons/myoglobinborder-min.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
@@ -12,7 +12,7 @@ description: >
 invert_sidebar: true
 ---
 
-# Lesson 1 - PyMol
+# Lesson 1 - Introduction
 
 ### Required reading for this lesson
 [Preface to Introduction to Protein Structural Bioinformatics](https://arxiv.org/abs/1801.09442)
@@ -20,6 +20,8 @@ invert_sidebar: true
 
 ### Optional reading for this lesson
 [Data Resources for Structural Bioinformatics](https://arxiv.org/abs/2307.02171)
+
+### [Slides](/assets/slides/01_Introduction.pdf)
 
 This is a course about structural bioinformatics. We will talk about all different kinds of structures, focusing on proteins but also touching on DNA/RNA and carbohydrates. However, before we dive into the meat of the topic, I want you to get a bit of an intuitive understanding of the molecules we are dealing with; that is why we start with the biomolecular visualisation software PyMol. It will also come in handy later when we want to visualise and test the concepts we learn about.
 
