--- a/proteins/_posts/2023-08-01-lesson2.md
+++ b/proteins/_posts/2023-08-01-lesson2.md
@@ -19,10 +19,10 @@ invert_sidebar: true
 - [4 videos on neural networks by 3Blue1Brown](https://www.youtube.com/watch?v=aircAruvnKk&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi)
 - [post about machine learning in protein engineering](https://www.ptngconsulting.com/blog/machine-learning-for-protein-engineering-here-to-stay)
 
-
 ### Optional reading for this lesson
 - [FastAI course - Practical Deep Learning for Coders](https://course.fast.ai/)
 
+### [Slides](/assets/slides/02_ML101.pdf)
 
 
 *[SERP]: Search Engine Results Page
