--- a/proteins/_posts/2023-08-01-lesson3.md
+++ b/proteins/_posts/2023-08-01-lesson3.md
@@ -19,10 +19,11 @@ invert_sidebar: true
 - [Jay Alammar - The Illustrated Transformer](http://jalammar.github.io/illustrated-transformer/)
 - [far1din - Convolutional Neural Network Playlist](https://www.youtube.com/playlist?list=PL1sQgSTcAaT7MbcLWacjsqoOQvqzMdUWg)
 
-
 ### Optional reading for this lesson
 - [D2L Book Chapter on Attention and Transformer](https://d2l.ai/chapter_attention-mechanisms-and-transformers/index.html)
 - [PyTorch Lightning - Deep Learning Course, Unit 8 explaining Attention and Language Models](https://lightning.ai/courses/deep-learning-fundamentals/unit-8.0-natural-language-processing-and-large-language-models/)
+
+### [Slides](/assets/slides/03_modelzoo.pdf)
 
 ### Credits
 
