--- a/proteins/_posts/2023-08-02-lesson4.md
+++ b/proteins/_posts/2023-08-02-lesson4.md
@@ -24,6 +24,8 @@ invert_sidebar: true
 - [Video Petar Veličković - Intro to graph neural networks](https://www.youtube.com/watch?v=8owQBFAHw7E)
 ![Bloom's taxonomy](https://www.google.com/url?sa=i&url=https%3A%2F%2Fcitt.ufl.edu%2Fresources%2Fthe-learning-process%2Fdesigning-the-learning-experience%2Fblooms-taxonomy%2F&psig=AOvVaw0R780i-w_ndUrB188eKcBY&ust=1687014747847000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCMi29eeJyP8CFQAAAAAdAAAAABAE)
 
+### [Slides](/assets/slides/04_GNNs.pdf)
+
 ### Credits
 
 Image was taken from the [GNN 101 notebook](https://colab.research.google.com/github/chaitjo/geometric-gnn-dojo/blob/main/geometric_gnn_101.ipynb) by Chaintaya Joshi.
