--- a/proteins/_posts/2023-08-04-lesson6.md
+++ b/proteins/_posts/2023-08-04-lesson6.md
@@ -22,6 +22,7 @@ invert_sidebar: true
 
 
 ### Optional reading for this lesson
+- [Blogpost GlassRoom - Deep Representation Learning](https://www.glassroom.com/deep-representation-learning)
 - [Video Yang Song | Diffusion and Score-Based Generative Models](https://www.youtube.com/watch?v=wMmqCMwuM2Q)
 - [Video Outlier | Derivation of the Math for Diffusion Models](https://www.youtube.com/watch?v=HoKDTa5jHvg)
 - [Video ML Berkeley | Lecture on Diffusion Models](https://www.youtube.com/watch?v=687zEGODmHA)
