--- a/_projects/ex11.md
+++ b/_projects/ex11.md
@@ -1,18 +1,20 @@
 ---
 layout: project
-title: Exercise 11 - Animations and Publication Quality Graphics
-caption: How to show your molecules from their best side
+title: Exercise 12 - Further topics
+caption: What else is out there
 description: >
-  In this exercise you are asked to recap some of the content we talked about in this lecture and visualise your results via some cool graphics.
-date: '15-08-2023'
+  In this exercise you are asked to go beyond what we did in the course and explore what other things there are out there in the field of structural bioinformatics.
+date: '16-08-2023'
 image: 
-  path: /assets/img/lessons/dna_side.png
+  path: /assets/img/lessons/further_topics.jpg
 #links:
 #  - title: Link
 #    url: https://hydejack.com/
 sitemap: false
 ---
 
-# Exercise 11 - Animations and Publication Quality Graphics
+# Exercise 12 - Further topics
+
+
 
 
