--- a/proteins/_posts/2023-08-02-lesson4.md
+++ b/proteins/_posts/2023-08-02-lesson4.md
@@ -1,34 +1,30 @@
 ---
 layout: post
-title: Lesson 4 - Geometric Deep Learning (GNNs)
-image: /assets/img/lessons/gnn_molecules.png
+title: Lesson 4 - Evolution, Language and Bioinformatics
+image: /assets/img/lessons/1tub_1fsz_super.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
   overlay: false
 accent_color: '#ccc'
 theme_color: '#ccc'
 description: >
-  How can we describe molecules on the computer?
+  Why proteins are not as simple as dog images
 invert_sidebar: true
 ---
 
-# Lesson 4 - Geometric Deep Learning (GNNs)
+# Lesson 4 - Evolution, Language and Bioinformatics
 
 ### Required reading for this lesson
-- [Article Google Research - A Gentle Introduction to Graph Neural Networks](https://distill.pub/2021/gnn-intro/)
-- [AI Coffee Break - Intro to Graph Neural Networks](https://www.youtube.com/watch?v=me3UsMm9QEs)
+- [Video Playlist on Sequence Alignments](https://www.youtube.com/watch?v=slUaVeNvuTk&list=PLQ-85lQlPqFNmbPEsMoxb5dM5qtRaVShn)
+- [Textbook Chapter on Structure Alignment](http://arxiv.org/abs/2307.02170)
+- Videos on [global sequence alignment](https://www.youtube.com/watch?v=ipp-pNRIp4g) versus [local sequence alignment](https://www.youtube.com/watch?v=lu9ScxSejSE&list=TLPQMjEwNzIwMjPG6vLp-w7KnQ&index=2)
+
 
 ### Optional reading for this lesson
-- [Textbook on Geometric Deep Learning](https://arxiv.org/abs/2104.13478)
-- [Datacamp Article to get you started with DL on Graphs in PyTorch Geometric](https://www.datacamp.com/tutorial/comprehensive-introduction-graph-neural-networks-gnns-tutorial)
-- [Video Petar Veličković - Intro to graph neural networks](https://www.youtube.com/watch?v=8owQBFAHw7E)
-![Bloom's taxonomy](https://www.google.com/url?sa=i&url=https%3A%2F%2Fcitt.ufl.edu%2Fresources%2Fthe-learning-process%2Fdesigning-the-learning-experience%2Fblooms-taxonomy%2F&psig=AOvVaw0R780i-w_ndUrB188eKcBY&ust=1687014747847000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCMi29eeJyP8CFQAAAAAdAAAAABAE)
+- Overview Videos on Biotite: [Intro](https://www.youtube.com/watch?v=SfgiRYrR1rQ) and [New Features](https://www.youtube.com/watch?v=dbiXm6W9WZQ)
 
-### [Slides](/assets/slides/04_GNNs.pdf)
 
-### Credits
 
-Image was taken from the [GNN 101 notebook](https://colab.research.google.com/github/chaitjo/geometric-gnn-dojo/blob/main/geometric_gnn_101.ipynb) by Chaintaya Joshi.
 
 
 *[SERP]: Search Engine Results Page
