Updated lesson pages

--- a/proteins/_posts/2023-08-01-lesson3.md
+++ b/proteins/_posts/2023-08-01-lesson3.md
@@ -29,6 +29,6 @@ invert_sidebar: true
 
 The title image of this exercise is from an excellent review paper by Mohammed AlQuraishi & Peter K. Sorger called [Differentiable Biology](https://www.nature.com/articles/s41592-021-01283-4); a highly recommended read!
 
-Some of the visualisations in the video were created via the fantastic [ManimML library](https://github.com/helblazer811/ManimML); see [their paper](https://arxiv.org/pdf/2306.17108.pdf) for more details on it!
+Some of the visualisations in the video were created via the fantastic [ManimML library](https://github.com/helblazer811/ManimML); see [their paper](https://arxiv.org/pdf/2306.17108.pdf) for more details on it! Also thanks to Nicholas Gale and Stephen Eglen for allowing me to use some of their amazing figures in this lecture!
 
 *[SERP]: Search Engine Results Page
