--- a/proteins/_posts/2023-08-02-lesson5.md
+++ b/proteins/_posts/2023-08-02-lesson5.md
@@ -23,13 +23,22 @@ invert_sidebar: true
 - [Textbook on Geometric Deep Learning](https://arxiv.org/abs/2104.13478)
 - [Datacamp Article to get you started with DL on Graphs in PyTorch Geometric](https://www.datacamp.com/tutorial/comprehensive-introduction-graph-neural-networks-gnns-tutorial)
 - [Video Petar Veličković - Intro to graph neural networks](https://www.youtube.com/watch?v=8owQBFAHw7E)
-![Bloom's taxonomy](https://www.google.com/url?sa=i&url=https%3A%2F%2Fcitt.ufl.edu%2Fresources%2Fthe-learning-process%2Fdesigning-the-learning-experience%2Fblooms-taxonomy%2F&psig=AOvVaw0R780i-w_ndUrB188eKcBY&ust=1687014747847000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCMi29eeJyP8CFQAAAAAdAAAAABAE)
+
+This week we will talk about Graph Neural Networks (GNNs). GNNs are a class of neural networks that operate on graphs. They are a powerful tool for learning representations of graph-structured data and have been successfully applied to many domains, including computer vision, natural language processing, and computational biology. In this lesson, we will learn how GNNs work and how they can be used in practice.
+
+It is important to note that this topic could be a whole course in itself (in fact [it is!](https://geometricdeeplearning.com/lectures/)). What I would like you to keep in mind is something called Bloom's taxonomy:
+
+<img src="https://citt.ufl.edu/media/cittufledu/images/Blooms-Taxonomy.png" width=500>
+
+It shows you different levels of thinking skills and how they build on top of each other. After this lecture, you will probably not be able to instantly create a new kind of GNN from scratch (top of the pyramid). That is totally fine and not the expectation. It is also not expected that you remember all kind of models or fact that are thrown at you during the lecture (bottom of the pyramid). Instead, my aim is to make you understand the key ideas and concepts behind how and why people use GNNs, make you apply these GNNs to a problem and let you analyse the results. This is the middle of the pyramid and the level of understanding I would like you to achieve.
+
+With that out of the way, let's dive right in!
 
 ### [Slides](/assets/slides/04_GNNs.pdf)
 
 ### Credits
 
-Image was taken from the [GNN 101 notebook](https://colab.research.google.com/github/chaitjo/geometric-gnn-dojo/blob/main/geometric_gnn_101.ipynb) by Chaintaya Joshi.
+Image was taken from the [GNN 101 notebook](https://colab.research.google.com/github/chaitjo/geometric-gnn-dojo/blob/main/geometric_gnn_101.ipynb) by Chaintaya Joshi. Also thanks to Petar Veličković for allowing me to use some of his amazing figures in this lecture!
 
 
 *[SERP]: Search Engine Results Page
