--- a/proteins/_posts/2023-08-10-lesson11.md
+++ b/proteins/_posts/2023-08-10-lesson11.md
@@ -15,10 +15,10 @@ invert_sidebar: true
 # Lesson 11 - Further topics and conclusion
 
 ### Required reading for this lesson
-- 
+- In this lesson we will talk about topics you want to hear more about or are specifically interested in, as well as some things we did not get to talk about during the course!
 
 ### Optional reading for this lesson
-- 
+- In this lesson we will talk about topics you want to hear more about or are specifically interested in, as well as some things we did not get to talk about during the course!
 
 
 
