--- a/proteins/_posts/2023-08-08-lesson10.md
+++ b/proteins/_posts/2023-08-08-lesson10.md
@@ -22,6 +22,8 @@ invert_sidebar: true
 - [OpenCADD platform](https://projects.volkamerlab.org/teachopencadd/index.html)
 
 
+This week we have a guest speaker joining us: [Charlie Harris](https://cch1999.github.io/), a PhD student from the University of Cambridge will talk with you about drug design and the role of AI in it. Charlie is working with Prof. Pietro Lio on using graph neural networks and generative models to create new drugs and will share some of his insights with you. Let's jump in!
+
 
 
 *[SERP]: Search Engine Results Page
