--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -23,6 +23,8 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/01_Introduction.pdf)
 
+#### Video will come as soon as the lecture happens!
+
 This is a course about structural bioinformatics. We will talk about all different kinds of structures, focusing on proteins but also touching on DNA/RNA and carbohydrates. However, before we dive into the meat of the topic, I want you to get a bit of an intuitive understanding of the molecules we are dealing with; that is why we start with the biomolecular visualisation software PyMol. It will also come in handy later when we want to visualise and test the concepts we learn about.
 
 There are different ways to interact with PyMol; one of the most natural ones is the Graphical User Interface (GUI), so basically what you are used to from Word PowerPoint etc: you click buttons and then something happens.
