--- a/proteins/_posts/2023-08-01-lesson2.md
+++ b/proteins/_posts/2023-08-01-lesson2.md
@@ -24,5 +24,7 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/02_ML101.pdf)
 
+#### Video will come as soon as the lecture happens!
+
 
 *[SERP]: Search Engine Results Page
