--- a/proteins/_posts/2023-08-01-lesson3.md
+++ b/proteins/_posts/2023-08-01-lesson3.md
@@ -25,6 +25,8 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/03_modelzoo.pdf)
 
+#### Video will come as soon as the lecture happens!
+
 ### Credits
 
 The title image of this exercise is from an excellent review paper by Mohammed AlQuraishi & Peter K. Sorger called [Differentiable Biology](https://www.nature.com/articles/s41592-021-01283-4); a highly recommended read!
