--- a/proteins/_posts/2023-08-02-lesson4.md
+++ b/proteins/_posts/2023-08-02-lesson4.md
@@ -14,6 +14,9 @@ invert_sidebar: true
 
 # Lesson 4 - Evolution, Language and Bioinformatics
 
+### [Slides](/assets/slides/01_Introduction.pdf)
+
+#### Video will come as soon as the lecture happens!
 ### Required reading for this lesson
 - [Video Playlist on Sequence Alignments](https://www.youtube.com/watch?v=slUaVeNvuTk&list=PLQ-85lQlPqFNmbPEsMoxb5dM5qtRaVShn)
 - [Textbook Chapter on Structure Alignment](http://arxiv.org/abs/2307.02170)
