--- a/proteins/_posts/2023-08-02-lesson5.md
+++ b/proteins/_posts/2023-08-02-lesson5.md
@@ -34,7 +34,9 @@ It shows you different levels of thinking skills and how they build on top of ea
 
 With that out of the way, let's dive right in!
 
-### [Slides](/assets/slides/04_GNNs.pdf)
+### [Slides](/assets/slides/05_GNNs.pdf)
+
+#### Video will come as soon as the lecture happens!
 
 ### Credits
 
