--- a/proteins/_posts/2023-08-03-lesson6.md
+++ b/proteins/_posts/2023-08-03-lesson6.md
@@ -29,6 +29,10 @@ invert_sidebar: true
 - [Video Aleksa Gordić - Google DeepMind's AlphaFold 2 explained](https://www.youtube.com/watch?v=HhomSGnP-x8)
 - [Textbook chapter on Structure Determination (in case you want to learn more about the experimental techniques)](http://arxiv.org/abs/2108.02706)
 
+### [Slides](/assets/slides/06_Structure_prediction.pdf)
+
+#### Video will come as soon as the lecture happens!
+
 ## Credits
 
 The title image was taken from a [blog post](https://www.ptngconsulting.com/blog/machine-learning-for-protein-engineering-here-to-stay) I have written as part of my consulting activities for PTNG. Also thanks to Mohammed AlQuraishi for allowing me to use some of his amazing figures in this lecture!
