--- a/proteins/_posts/2023-08-05-lesson8.md
+++ b/proteins/_posts/2023-08-05-lesson8.md
@@ -26,4 +26,9 @@ invert_sidebar: true
 - [How can the protein design community best support biologists who want to harness AI tools for protein structure prediction and design?](https://www.cell.com/cell-systems/fulltext/S2405-4712(23)00212-0)
 
 
+### [Slides](/assets/slides/08_protein_design.pdf)
+
+#### Video will come as soon as the lecture happens!
+
+
 *[SERP]: Search Engine Results Page
