--- a/proteins/_posts/2023-08-06-lesson9.md
+++ b/proteins/_posts/2023-08-06-lesson9.md
@@ -22,6 +22,8 @@ invert_sidebar: true
 ### Optional reading for this lesson
 - [Textbook Chapter on Monte Carlos for Protein Structures, good addition to chapter on Molecular Dynamics](http://arxiv.org/abs/2307.02177)
 
+### [Slides](/assets/slides/09_simulations.pdf)
 
+#### Video will come as soon as the lecture happens!
 
 *[SERP]: Search Engine Results Page
