--- a/proteins/_posts/2023-08-08-lesson10.md
+++ b/proteins/_posts/2023-08-08-lesson10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Lesson 9 - Drug Design (Docking and Generative)
+title: Lesson 10 - Drug Design (Docking and Generative)
 image: /assets/img/lessons/docking.png
 accent_image: 
   background: url('/assets/img/blog/jj-ying.jpg') center/cover
@@ -24,6 +24,9 @@ invert_sidebar: true
 
 This week we have a guest speaker joining us: [Charlie Harris](https://cch1999.github.io/), a PhD student from the University of Cambridge will talk with you about drug design and the role of AI in it. Charlie is working with Prof. Pietro Lio on using graph neural networks and generative models to create new drugs and will share some of his insights with you. Let's jump in!
 
+### [Slides](/assets/slides/10_drug_design.pdf)
+
+#### Video will come as soon as the lecture happens!
 
 
 *[SERP]: Search Engine Results Page
