--- a/proteins/_posts/2023-08-10-lesson11.md
+++ b/proteins/_posts/2023-08-10-lesson11.md
@@ -21,7 +21,9 @@ invert_sidebar: true
 - In this lesson we will talk about topics you want to hear more about or are specifically interested in, as well as some things we did not get to talk about during the course!
 
 
+### Slides will come at the end of this course for this lecture
 
+#### Video will come as soon as the lecture happens!
 
 
 *[SERP]: Search Engine Results Page
