--- a/proteins/_posts/2023-08-04-lesson7.md
+++ b/proteins/_posts/2023-08-04-lesson7.md
@@ -19,8 +19,6 @@ invert_sidebar: true
 - [Video Ari Seff - What are Diffusion Models?](https://www.youtube.com/watch?v=fbLgFrlTnGU)
 - [First ten minutes of Introduction to Generative AI](https://www.youtube.com/watch?v=G2fqAlgmoPo)
 
-
-
 ### Optional reading for this lesson
 - [Blogpost GlassRoom - Deep Representation Learning](https://www.glassroom.com/deep-representation-learning)
 - [Video Yang Song - Diffusion and Score-Based Generative Models](https://www.youtube.com/watch?v=wMmqCMwuM2Q)
@@ -29,6 +27,9 @@ invert_sidebar: true
 - [Blogpost Renato Candido - Build your first GANs](https://realpython.com/generative-adversarial-networks/#the-architecture-of-generative-adversarial-networks)
 
 
+### [Slides](/assets/slides/07_generative_modelling.pdf)
+
+#### Video will come as soon as the lecture happens!
 ## Credits
 
 The image was taken from the [Stable Diffusion repository](https://github.com/Stability-AI/stablediffusion/blob/main/assets/stable-samples/txt2img/768/merged-0002.png) by StabilityAI.
