Uploaded first lecture

--- a/proteins/_posts/2023-02-1-lesson1.md
+++ b/proteins/_posts/2023-02-1-lesson1.md
@@ -23,7 +23,14 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/01_Introduction.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video 
+
+<div class="sixteen-nine">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7o-hdU68G9k?si=qVU83tX2XRHirzYp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+https://www.youtube.com/watch?v=7o-hdU68G9k
 
 This is a course about structural bioinformatics. We will talk about all different kinds of structures, focusing on proteins but also touching on DNA/RNA and carbohydrates. However, before we dive into the meat of the topic, I want you to get a bit of an intuitive understanding of the molecules we are dealing with; that is why we start with the biomolecular visualisation software PyMol. It will also come in handy later when we want to visualise and test the concepts we learn about.
 
