Uploaded 2nd/3rd lecture

--- a/proteins/_posts/2023-08-01-lesson2.md
+++ b/proteins/_posts/2023-08-01-lesson2.md
@@ -24,7 +24,9 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/02_ML101.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YxO8vqyF_bE?si=pJfQoUPuC9Td35Pj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 *[SERP]: Search Engine Results Page
