--- a/proteins/_posts/2023-08-01-lesson3.md
+++ b/proteins/_posts/2023-08-01-lesson3.md
@@ -25,7 +25,9 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/03_modelzoo.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kf0qCNwOKCI?si=pYEbVBnwVvk0e001" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ### Credits
 
