--- a/proteins/_posts/2023-08-02-lesson4.md
+++ b/proteins/_posts/2023-08-02-lesson4.md
@@ -14,9 +14,6 @@ invert_sidebar: true
 
 # Lesson 4 - Evolution, Language and Bioinformatics
 
-### [Slides](/assets/slides/01_Introduction.pdf)
-
-#### Video will come as soon as the lecture happens!
 ### Required reading for this lesson
 - [Video Playlist on Sequence Alignments](https://www.youtube.com/watch?v=slUaVeNvuTk&list=PLQ-85lQlPqFNmbPEsMoxb5dM5qtRaVShn)
 - [Textbook Chapter on Structure Alignment](http://arxiv.org/abs/2307.02170)
@@ -26,6 +23,10 @@ invert_sidebar: true
 ### Optional reading for this lesson
 - Overview Videos on Biotite: [Intro](https://www.youtube.com/watch?v=SfgiRYrR1rQ) and [New Features](https://www.youtube.com/watch?v=dbiXm6W9WZQ)
 
+### [Slides](/assets/slides/01_Introduction.pdf)
+
+#### Video 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/u-Vrlc-68aw?si=SdQD3vNglT_v2kyl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 
